ref #13 fix auth middleware
