# controller/report.go
@@ -1,10 +1,10 @@
 package controller
 
 import (
-	"fmt"
 	"github.com/gin-gonic/gin"
 	"net/http"
 	"reportify-backend/entity"
+	"time"
 )
 
 type ReportController struct {
@@ -18,7 +18,24 @@ func NewReportController(u ReportUseCase) *ReportController {
 // ReportsResponse - 日報リストレスポンス
 type ReportsResponse struct {
 	// 日報リスト
-	Reports []*entity.Report `json:"reports"`
+	Reports []*ReportResponse `json:"reports"`
+}
+
+type ReportResponse struct {
+	// 日報レスポンス
+	ID string `json:"id"`
+	// ユーザID
+	UserID string `json:"userId"`
+	// ユーザ名
+	UserName string `json:"userName"`
+	// 本文
+	Body string `json:"body"`
+	// レビュー本文
+	ReviewBody *string `json:"reviewBody"`
+	// 実施したタスクリスト
+	Tasks []entity.Task `json:"tasks"`
+	// 作成日時
+	Timestamp time.Time `json:"timestamp"`
 }
 
 // GetReports godoc
@@ -35,13 +52,25 @@ type ReportsResponse struct {
 // @Router   /organizations/{organizationCode}/reports [get]
 // @Security Bearer
 func (c *ReportController) GetReports(ctx *gin.Context) (interface{}, error) {
-	userID, _ := ctx.Get(entity.ContextKeyUserID)
-	id := userID.(string)
-	code := ctx.Params.ByName("organizationCode")
-	fmt.Println(code)
-	fmt.Println(id)
-	reports, err := c.ReportUseCase.GetReports(ctx, code, id)
-	return ReportsResponse{reports}, err
+	user, _ := ctx.Get(entity.ContextKeyUser)
+	oUser := user.(*entity.OrganizationUser)
+	reports, err := c.ReportUseCase.GetReports(ctx, oUser.OrganizationID)
+	if err != nil {
+		return nil, err
+	}
+	var reportResponses []*ReportResponse
+	for _, report := range reports {
+		reportResponses = append(reportResponses, &ReportResponse{
+			ID:         report.ID,
+			UserID:     report.UserID,
+			UserName:   oUser.UserName,
+			Body:       report.Body,
+			ReviewBody: report.ReviewBody,
+			Tasks:      report.Tasks,
+			Timestamp:  report.Timestamp,
+		})
+	}
+	return reportResponses, nil
 }
 
 // GetReport godoc
@@ -49,24 +78,31 @@ func (c *ReportController) GetReports(ctx *gin.Context) (interface{}, error) {
 // @Tags     Report
 // @Accept   json
 // @Produce  json
-// @Param    userId           query    string               true "ユーザID"
 // @Param    organizationCode path     string               true "組織コード"
 // @Param    reportId         path     string               true "日報ID"
-// @Success  200              {object} entity.Report        "OK"
+// @Success  200              {object} ReportResponse       "OK"
 // @Failure  401              {object} entity.ErrorResponse "Unauthorized"
 // @Failure  403              {object} entity.ErrorResponse "Forbidden"
 // @Failure  404              {object} entity.ErrorResponse "Not Found"
 // @Router   /organizations/{organizationCode}/reports/{reportId} [get]
 // @Security Bearer
 func (c *ReportController) GetReport(ctx *gin.Context) (interface{}, error) {
-	code := ctx.Params.ByName("organizationCode")
 	reportId := ctx.Params.ByName("reportId")
-	userID, _ := ctx.Get(entity.ContextKeyUserID)
-	id := userID.(string)
-	fmt.Println(code)
-	fmt.Println(reportId)
-	fmt.Println(id)
-	return c.ReportUseCase.GetReport(ctx, code, reportId, id)
+	user, _ := ctx.Get(entity.ContextKeyUser)
+	oUser := user.(*entity.OrganizationUser)
+	report, err := c.ReportUseCase.GetReport(ctx, oUser.OrganizationID, reportId)
+	if err != nil {
+		return nil, err
+	}
+	return &ReportResponse{
+		ID:         reportId,
+		UserID:     report.UserID,
+		UserName:   oUser.UserName,
+		Body:       report.Body,
+		ReviewBody: report.ReviewBody,
+		Tasks:      report.Tasks,
+		Timestamp:  report.Timestamp,
+	}, nil
 }
 
 // CreateReportRequest - 日報作成リクエスト
@@ -96,11 +132,14 @@ func (c *ReportController) CreateReport(ctx *gin.Context) (interface{}, error) {
 	if err := ctx.Bind(&req); err != nil {
 		return nil, entity.NewError(http.StatusBadRequest, err)
 	}
-	code := ctx.Params.ByName("organizationCode")
-	userID, _ := ctx.Get(entity.ContextKeyUserID)
-	id := userID.(string)
-	fmt.Println(code)
-	fmt.Println(req.Body)
-	fmt.Println(id)
-	return c.ReportUseCase.CreateReport(ctx, code, id, req.Body, req.Tasks)
+	user, _ := ctx.Get(entity.ContextKeyUser)
+	oUser := user.(*entity.OrganizationUser)
+	report, err := c.ReportUseCase.CreateReport(ctx, oUser.OrganizationID, oUser.UserID, req.Body, req.Tasks)
+	if err != nil {
+		return nil, err
+	}
+	return CreateReportRequest{
+		Body:  report.Body,
+		Tasks: report.Tasks,
+	}, nil
 }
