# docs/swagger.json
@@ -324,13 +324,6 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "ユーザID",
-                        "name": "userId",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
                         "description": "組織コード",
                         "name": "organizationCode",
                         "in": "path",
@@ -348,7 +341,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entity.Report"
+                            "$ref": "#/definitions/controller.ReportResponse"
                         }
                     },
                     "401": {
@@ -571,6 +564,42 @@
                 }
             }
         },
+        "controller.ReportResponse": {
+            "type": "object",
+            "properties": {
+                "body": {
+                    "description": "本文",
+                    "type": "string"
+                },
+                "id": {
+                    "description": "日報レスポンス",
+                    "type": "string"
+                },
+                "reviewBody": {
+                    "description": "レビュー本文",
+                    "type": "string"
+                },
+                "tasks": {
+                    "description": "実施したタスクリスト",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entity.Task"
+                    }
+                },
+                "timestamp": {
+                    "description": "作成日時",
+                    "type": "string"
+                },
+                "userId": {
+                    "description": "ユーザID",
+                    "type": "string"
+                },
+                "userName": {
+                    "description": "ユーザ名",
+                    "type": "string"
+                }
+            }
+        },
         "controller.ReportsResponse": {
             "type": "object",
             "properties": {
@@ -578,7 +607,7 @@
                     "description": "日報リスト",
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/entity.Report"
+                        "$ref": "#/definitions/controller.ReportResponse"
                     }
                 }
             }
@@ -661,34 +690,6 @@
                 },
                 "name": {
                     "description": "組織名",
-                    "type": "string"
-                }
-            }
-        },
-        "entity.Report": {
-            "type": "object",
-            "properties": {
-                "body": {
-                    "description": "本文",
-                    "type": "string"
-                },
-                "id": {
-                    "description": "日報レスポンス",
-                    "type": "string"
-                },
-                "reviewBody": {
-                    "description": "レビュー本文",
-                    "type": "string"
-                },
-                "tasks": {
-                    "description": "実施したタスクリスト",
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/entity.Task"
-                    }
-                },
-                "userId": {
-                    "description": "ユーザID",
                     "type": "string"
                 }
             }
